--- a/app/src/main/res/layout/activity_setup_game.xml
+++ b/app/src/main/res/layout/activity_setup_game.xml
@@ -4,14 +4,30 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.example.student.blackjacksingledevice.SetupGameActivity">
-
+    tools:context="com.example.student.blackjacksingledevice.SetupGameActivity"
+    android:id="@+id/relLayout">
+<LinearLayout
+    android:id="@+id/llayout"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="Let's set up the game!"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:id="@+id/tvSetUp" />
+</LinearLayout>
+
+    <Button
+        android:id="@+id/btnDone"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="openGamePlayActivity"
+        android:text="Done"
+        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
