Player names in EditText(s)
Names that are added to EditText(s) are now carried over to the next
activity (as demonstrated by Toast messages)!

--- a/app/src/main/res/layout/activity_setup_game.xml
+++ b/app/src/main/res/layout/activity_setup_game.xml
@@ -25,9 +25,9 @@
         android:id="@+id/btnDone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:onClick="openGamePlayActivity"
         android:text="Done"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:onClick="openGamePlayActivity"/>
 
 </RelativeLayout>
