--- a/app/src/main/res/layout/activity_game_play.xml
+++ b/app/src/main/res/layout/activity_game_play.xml
@@ -7,16 +7,10 @@
     tools:context="com.example.student.blackjacksingledevice.GamePlayActivity"
     android:id="@+id/playRelLayout">
 
-<GridView
-    android:id="@+id/gridView1"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:horizontalSpacing="10dp"
-    android:verticalSpacing="10dp"
-    android:gravity="center"/>
+    <LinearLayout
+        android:id="@+id/myLinearLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal" />
 
-<ImageView
-    android:id="@+id/ivTest"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content" />
 </RelativeLayout>
