--- a/app/src/main/res/layout/activity_game_play.xml
+++ b/app/src/main/res/layout/activity_game_play.xml
@@ -7,11 +7,19 @@
     tools:context="com.example.student.blackjacksingledevice.GamePlayActivity"
     android:id="@+id/playRelLayout">-->
 
-<LinearLayout
+<!--<LinearLayout
     android:id="@+id/myLinearLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal"
-    xmlns:android="http://schemas.android.com/apk/res/android" />
+    xmlns:android="http://schemas.android.com/apk/res/android" >
+    </LinearLayout>-->
+<TableLayout
+    android:id="@+id/gameTableLayout"
+    android:layout_height="fill_parent"
+    android:layout_width="fill_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+
+</TableLayout>
 
 <!--</RelativeLayout>-->
