--- a/app/src/main/res/layout/activity_game_play.xml
+++ b/app/src/main/res/layout/activity_game_play.xml
@@ -1,12 +1,23 @@
-<!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.example.student.blackjacksingledevice.GamePlayActivity"
-    android:id="@+id/playRelLayout">-->
+    android:id="@+id/playRelLayout">
 
+    <LinearLayout
+        android:id="@+id/myLinearLayout"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/tv1"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="Let's get started! "/>
+    </LinearLayout>
 <!--<LinearLayout
     android:id="@+id/myLinearLayout"
     android:layout_width="match_parent"
@@ -14,12 +25,10 @@
     android:orientation="horizontal"
     xmlns:android="http://schemas.android.com/apk/res/android" >
     </LinearLayout>-->
-<TableLayout
-    android:id="@+id/gameTableLayout"
-    android:layout_height="fill_parent"
-    android:layout_width="fill_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android">
 
-</TableLayout>
+<!--<GridView
+    android:layout_height="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android" />-->
 
-<!--</RelativeLayout>-->
+
+    </RelativeLayout>
