working toast/Textview from outside OnCreate() method

--- a/app/src/main/res/layout/activity_game_play.xml
+++ b/app/src/main/res/layout/activity_game_play.xml
@@ -14,6 +14,11 @@
     android:orientation="horizontal"
     xmlns:android="http://schemas.android.com/apk/res/android" >
 
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Here we go!\n"/>
     <!--<GridView
         android:id="@+id/gridView1"
         android:layout_width="match_parent"
