Added a button for control flow

--- a/app/src/main/res/layout/activity_game_play.xml
+++ b/app/src/main/res/layout/activity_game_play.xml
@@ -25,6 +25,12 @@
                 android:id="@+id/gridView1"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"/>-->
+            <Button
+                android:id="@+id/btnPlayGame"
+                android:tag="i, deck, playerNames"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Play Game" />
 
         </LinearLayout>
     </ScrollView>
