--- a/app/src/main/res/layout/activity_game_play.xml
+++ b/app/src/main/res/layout/activity_game_play.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    tools:context="com.example.student.blackjacksingledevice.GamePlayActivity"
+    tools:context="com.candeapps.blackjacksingledevice.GamePlayActivity"
     android:id="@+id/playRelLayout">
 
     <ScrollView
@@ -25,13 +25,24 @@
                 android:id="@+id/gridView1"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"/>-->
-            <Button
+           <!-- <Button
                 android:id="@+id/btnPlayGame"
                 android:tag="i, deck, playerNames"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Play Game" />-->
+            <!--<Button
+                android:id="@+id/btnToNextActivity"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Play Game" />
+                android:text="Continue" />-->
 
         </LinearLayout>
+        <!--<LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+        </LinearLayout>-->
     </ScrollView>
 </RelativeLayout>
