--- a/app/src/main/res/layout/activity_end_game.xml
+++ b/app/src/main/res/layout/activity_end_game.xml
@@ -4,8 +4,41 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.example.student.blackjacksingledevice.EndGameActivity">
+    tools:context="com.candeapps.blackjacksingledevice.EndGameActivity">
+
+    <!--<LinearLayout
+        android:id="@+id/endLinearLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+-->
 
 
 
+   <!-- </LinearLayout>-->
+
+
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Thanks for playing!!!"
+        android:id="@+id/thanks"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="125dp"
+        android:layout_centerHorizontal="true"
+        android:gravity="center_horizontal"
+        android:textColorHint="#ffebffad"
+        android:textStyle="bold|italic"
+        android:typeface="serif"
+        android:textSize="34dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Please play again!"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:id="@+id/textView2"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true" />
 </RelativeLayout>
