--- a/app/src/main/res/layout/activity_setup_game.xml
+++ b/app/src/main/res/layout/activity_setup_game.xml
@@ -4,7 +4,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.example.student.blackjacksingledevice.SetupGameActivity"
+    tools:context="com.candeapps.blackjacksingledevice.SetupGameActivity"
     android:id="@+id/relLayout">
 <LinearLayout
     android:id="@+id/llayout"
